cmake_minimum_required(VERSION 3.21)
project(c C)
set(CMAKE_C_STANDARD 99)

add_executable(c main.c source/learn/learn1.c header/learn/learn1.h source/learn/learn2.c header/learn/learn2.h header/learn/learn3.h source/learn/learn3.c source/learn/learn4.c header/learn/learn4.h header/learn/learn4/hotel.h header/learn/learn5.h source/learn/learn5.c header/learn/learn6.h source/learn/learn6.c header/learn/other.h source/learn/other.c header/practice/practice1.h source/practice/practice1.c header/test/test1.h test/test1.c header/practice/practice2.h source/practice/practice2.c header/practice/practice3.h source/practice/practice3.c header/practice/practice4.h source/practice/practice4.c header/arithmetic/arithmetic.h source/arithmetic/arithmetic.c source/exam/exam.c header/exam/exam.h header/practice/practice5.h source/practice/practice5.c header/practice/practice6.h source/practice/practice6.c header/practice/practice7.h source/practice/practice7.c)
